[package]
name = "domainr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
hickory-resolver = "0.25.1"
hickory-server = "0.25.1"
hyper = { version = "1.6.0", features = ["full"] }
rcgen = "0.13.2"
rustls = "0.23.26"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rustls-pemfile = "2.2.0"
webpki = "0.22.4"
hickory-proto = "0.25.1"
